# sledge

./: Bingham.hs  BinghamNormalization.hs  CLAUDE.md  IPF.hs  Orientation.hs  README.md  SphereProjection.hs  Symmetry.hs  TesseractGrid.hs  cabal.project  cabal.project.freeze  flake.nix  sledge.cabal
SH/: HyperSphere.hs
profile/: Main.hs  TestKernel.hs  TestKernelSampling.hs  TestODF.hs  TestSampler.hs  TestTexture.hs
src/File/: ANGReader.hs  ANGWriter.hs  CTFReader.hs  CTFWriter.hs  EBSD.hs  InternalParsers.hs  ODFReader.hs
src/Texture/: Bingham.hs  DDF.hs  HyperSphere.hs  IPF.hs  IsoSphere.hs  Kernel.hs  ODF.hs  Orientation.hs  Sampler.hs  SphereProjection.hs  Symmetry.hs  TesseractGrid.hs
src/Texture/Bingham/: Constant.hs
src/Texture/SH/: HyperSphere.hs
test/: BinghamConstantTest.hs  BinghamTest.hs  DDFTest.hs  IPFTest.hs  Main.hs  ODFTest.hs  SamplerTest.hs  SphereProjTest.hs  TesseractGridTest.hs  TestKernel.hs  TestKernelSampling.hs  TestODF.hs  TestOrphans.hs  TestSampler.hs  TestTexture.hs
